# contacts-manager

./: README.md  clients.csv  database.db  directory.py  main.py  pyproject.toml  setup.py
clients/: commands.py  models.py  services.py
contacts/: controller.py  models.py
utilities/: database.py  decorators.py
