[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Esteban Solorzano <estebansolorzano27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
